# bavy-jam

./: Cargo.toml
.cargo/: config_ci.toml
.github/workflows/: ci.yaml  release.yaml
assets/: .gitignore  box.blend  level.blend  level.glb  level.gltf
src/: main.rs
src/gameplay/: mod.rs  npc.rs  player.rs  sfx.rs
